fix bug icon số điện thoại

--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -385,7 +385,7 @@
                       ({{'receive.contract.process' | translate}})</div>
                   </div>
                   <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
+                    <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
                     <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                   </div>
                 </div>
@@ -428,7 +428,7 @@
                   <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span
                       class="required-title">*</span></div>
                   <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
+                    <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
                     <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
