--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -392,7 +392,7 @@
                     <div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div>
                   </div>
                   <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
+                    <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
                     <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                   </div>
                 </div>
@@ -436,7 +436,7 @@
                     <span class="required-title">*</span>
                   </div>
                   <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
+                    <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
                     <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
@@ -1131,7 +1131,7 @@
                     </div>
                     <div style="display: flex;">
                       <div class="input-data" style="width: 85%;">
-                        <img src="assets/img/login_email.svg" class="input-img">
+                        <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
                         <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
                       </div>
 
@@ -1181,7 +1181,7 @@
                         ({{'receive.contract.process' | translate}})</div>
                     </div>
                     <div class="input-data">
-                      <img src="assets/img/login_email.svg" class="input-img">
+                      <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
                       <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
                   </div>
@@ -1222,7 +1222,7 @@
                     <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span
                         class="required-title">*</span></div>
                     <div class="input-data">
-                      <img src="assets/img/login_email.svg" class="input-img">
+                      <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
                       <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
                     </div>
                   </div>
@@ -1586,7 +1586,7 @@
                     </div>
                     <div style="display: flex;">
                     <div class="input-data" style="width: 85%;">
-                      <img src="assets/img/login_email.svg" class="input-img">
+                      <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
                       <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
                     </div>
 
@@ -1643,7 +1643,7 @@
                       <div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div>
                     </div>
                     <div class="input-data">
-                      <img src="assets/img/login_email.svg" class="input-img">
+                      <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
                       <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
                   </div>
@@ -1684,7 +1684,7 @@
                     <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span
                         class="required-title">*</span></div>
                     <div class="input-data">
-                      <img src="assets/img/login_email.svg" class="input-img">
+                      <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
                       <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
                     </div>
                   </div>
