--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
@@ -30,16 +30,21 @@
   </div>
 </div>
 
+<!--Số hợp đồng-->
 <div class="text-sign" *ngIf="sign.sign_unit == 'so_tai_lieu'">
-  <div class="skeleton-sign" (click)="doEditContractNo()" *ngIf="!contractNoValue && count == 0 && (!sign.valueSign && !sign.value && !contractNoValueSign)">
+  <div class="skeleton-sign" (click)="doEditContractNo()" *ngIf="!contractNoValue && count == 0 && (!sign.valueSign && !sign.value && !contractNoValueSign) && !view">
     <span id="input-text" *ngIf="!sign.valueSign">{{getText(sign)}}</span>
   </div>
 
-  <div class="skeleton-sign-value" (click)="doEditContractNo()" *ngIf="!contractNoValue && count == 0 && (this.contractNoValueSign || sign.value || sign.valueSign)">
+  <div class="skeleton-sign" *ngIf="view">
+    <span id="input-text" *ngIf="!sign.valueSign">{{getText(sign)}}</span>
+  </div>
+
+  <div class="skeleton-sign-value" (click)="doEditContractNo()" *ngIf="!contractNoValue && count == 0 && (this.contractNoValueSign || sign.value || sign.valueSign) && !view">
     <span class="input-text">{{getText(sign)}}</span>
   </div>
 
-  <div class="skeleton-sign" *ngIf="contractNoValue || count > 0">
+  <div class="skeleton-sign" *ngIf="contractNoValue || count > 0 && !view">
     <input type="text" class="input-edit-text" [(ngModel)]="contractNoValueSign" (blur)="doneEditContractNoSign(sign)" #inputEditContractNo>
   </div>
 </div> 
