--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -746,7 +746,7 @@
                         (change)="changeIsSmsReviewer($event, item, index)">
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
 
-                      <!-- <div class="input-data" style="width: 13%; margin-top: 8px;">
+                      <!-- <div class="input-data" style="width: 13%; margin-top: 8px;" (change)="onChange($event)">
                         <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale">
                           <div *ngIf="d.locale =='vi'">
                             <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
