fix bug lech usb token

--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -60,6 +60,8 @@
   <div class="col-md-2"></div>
 
   <div class="col-md-5" style="display: flex; flex-direction: column">
+
+    <!--Tên hợp đồng-->
     <div class="form-group">
       <div class="label_item">{{'contract.name' | translate}} <span class="require_star">*</span></div>
       <div class="input-group">
