--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
@@ -361,27 +361,17 @@
                   </div>
                 </div>
 
-                <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là usbtoken-->
-                <div
-                  class="participants--input"
-                  style="display: flex"
-                  *ngIf="getDataSignUSBToken(d).length > 0"
-                >
+                <!--trường hiển thị khi van thu tổ chức của tôi chọn loại ký là usbtoken-->
+                <div class="participants--input" style="display: flex" *ngIf="getDataSignUSBToken(d).length > 0 || getDataSignHsm(d).length > 0">
                   <div class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">
-                      Mã số thuế/CMT/CCCD&nbsp;<span class="required-title"
-                        >*</span
-                      >
-                      <div style="color: #ffc107">
+                      Mã số thuế/CMT/CCCD&nbsp;<span class="required-title">*</span>
+                      <div *ngIf="getDataSignUSBToken(d).length > 0" style="color: #ffc107">
                         ({{ "Thông tin trong USB token" | translate }})
                       </div>
                     </div>
                     <div class="input-data">
-                      <input
-                        type="text"
-                        placeholder="{{
-                          'Nhập mã số thuế/CMT/CCCD' | translate
-                        }}"
+                      <input type="text" placeholder="{{'Nhập mã số thuế/CMT/CCCD' | translate}}"
                         [(ngModel)]="d.card_id"
                         oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                       />
