--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -124,7 +124,7 @@
   </div>
 </div>
 
-<div *ngIf="this.mobile === true">
+<div *ngIf="this.mobile === true && !this.multiSignInPdf">
 
   <div class="skeleton-sign position-absolute opacity-0">
     <app-display-digital-signature [nameCompany]="nameCompany" [cardId]="cardId" [phonePKI]="phonePKI"></app-display-digital-signature>
