--- a/src/app/main/contract/detail-contract/detail-contract.component.scss
+++ b/src/app/main/contract/detail-contract/detail-contract.component.scss
@@ -363,19 +363,18 @@
 
 
 .input-mobile {
-  // appearance: none;
-
-  box-sizing: border-box; 
-  text-align: center; 
-  // text-align: -webkit-center;
-  // width: 38px;
-  // height: 20px;
+  box-sizing: border-box;
+  width: 50px;
+  height: 30px;
   background: #FFFFFF;
   border: 1px solid #87CAFF;
   border-radius: 5px; 
-  font-size: 15px;
-  // -webkit-appearance: none;
-
+  margin-left: 5px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  font-family: 'Lexend Deca'
 }
 
 
