--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -664,23 +664,61 @@
               <div>
                 {{'user.lead' | translate}}
               </div>
+            </div>
+            <div class="participants--add">
 
-              <div class="participants-otp" style="display: flex">
-                <input type="checkbox" style="width: 17px; height: 17px;"
-                  *ngIf="getPartnerCoordination(item).length == 0" (change)="changeIsCoordination($event, item, id)">
-                <input type="checkbox" style="width: 17px; height: 17px;"
-                  *ngIf="getPartnerCoordination(item).length > 0" checked
-                  (change)="changeIsCoordination($event, item, id)">
-                <div style="padding: 0 20px 0 5px">Có người điều phối</div>
+                <div class="participants-otp" style="display: flex;margin: 15px;" >
+                  <input type="checkbox" style="width: 17px; height: 17px;"
+                    *ngIf="getPartnerCoordination(item).length == 0" (change)="changeIsCoordination($event, item, id)">
+                  <input type="checkbox" style="width: 17px; height: 17px;"
+                    *ngIf="getPartnerCoordination(item).length > 0" checked
+                    (change)="changeIsCoordination($event, item, id)">
+                  <div style="padding: 0 20px 0 5px">Có người điều phối</div>
 
+                  <!-- <div *ngIf="getPartnerCoordination(item).length > 0 " style="display: flex">
+                    <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp != 1" 
+                    (change)="changeIsSmsCoordination($event, item, 0)">
+                    <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp == 1" checked 
+                    (change)="changeIsSmsCoordination($event, item, 0)">
+                    <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
+                  </div> -->
 
-                <!-- <div *ngIf="getPartnerCoordination(item).length > 0 " style="display: flex">
-                  <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp != 1" (change)="changeIsSmsCoordination($event, item, 0)">
-                  <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp == 1" checked (change)="changeIsSmsCoordination($event, item, 0)">
-                  <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
-                </div> -->
+                  <div class="participants--content" *ngFor="let d of getPartnerCoordination(item); let index = index">
+                  <div class="input-data" style="width: 13%; margin-top: 8px;" *ngIf="checkSms">
+                    <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale">
+                      <div *ngIf="d.locale =='vi'">
+                        <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
+                          id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+                      </div>
+                      <div *ngIf="d.locale =='en'">
+                        <button *ngIf="d.locale =='en'" class="btn btn-outline-primary db_icon_english"
+                          id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+                      </div>
+                      <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                        <div class="switch-language">
+                          <button class="db_icon_vietnam" ngbDropdownItem (click)="d.locale = 'vi'">
+                            <div class="language">{{ "vie" | translate }}</div>
+                          </button>
+                        </div>
+                        <div class="switch-language">
+                          <button class="db_icon_english" ngbDropdownItem (click)="d.locale = 'en'">
+                            <div class="language">{{ "eng" | translate }}</div>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+<!--   
+                  <div *ngIf="getPartnerCoordination(item).length > 0 " style="display: flex">
+                    <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp != 1" (change)="changeIsSmsCoordination($event, item, 0)">
+                    <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp == 1" checked (change)="changeIsSmsCoordination($event, item, 0)">
+                    <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
+                  </div> -->
 
-              </div>
+                  
+                  
+                </div>
             </div>
           </div>
 
@@ -746,7 +784,7 @@
                         (change)="changeIsSmsReviewer($event, item, index)">
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
 
-                      <!-- <div class="input-data" style="width: 13%; margin-top: 8px;" (change)="onChange($event)">
+                      <div class="input-data" style="width: 13%; margin-top: 8px;" *ngIf="d.is_otp == 1">
                         <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale">
                           <div *ngIf="d.locale =='vi'">
                             <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
@@ -756,6 +794,7 @@
                             <button *ngIf="d.locale =='en'" class="btn btn-outline-primary db_icon_english"
                               id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
                           </div>
+
                           <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
                             <div class="switch-language">
                               <button class="db_icon_vietnam" ngbDropdownItem (click)="d.locale = 'vi'">
@@ -769,7 +808,7 @@
                             </div>
                           </div>
                         </div>
-                      </div> -->
+                      </div>
 
                     </div>
                   </div>
@@ -960,7 +999,7 @@
                         [disabled]="getDataSignCka(d).length > 0" (change)="changeIsSmsSignature($event, item, index)">
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
 
-                      <!-- <div class="input-data" style="width: 6%; margin-top: 8px;">
+                      <div class="input-data" style="width: 6%; margin-top: 8px;" *ngIf="d.is_otp == 1">
                         <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale">
                           <div *ngIf="d.locale =='vi'">
                             <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
@@ -983,7 +1022,7 @@
                             </div>
                           </div>
                         </div>
-                      </div> -->
+                      </div>
 
 
                     </div>
@@ -1055,7 +1094,7 @@
                         (change)="changeIsSmsDocument($event, item, index)">
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
 
-                      <!-- <div class="input-data" style="width: 6%; margin-top: 8px;">
+                      <div class="input-data" style="width: 6%; margin-top: 8px;" *ngIf="d.is_otp == 1">
                         <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale">
                           <div *ngIf="d.locale =='vi'">
                             <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
@@ -1078,7 +1117,7 @@
                             </div>
                           </div>
                         </div>
-                      </div> -->
+                      </div>
                       
                     </div>
                   </div>
@@ -1243,6 +1282,31 @@
                         [disabled]="getDataSignCka(d).length > 0" checked
                         (change)="changeIsSmsSignature($event, item, index)">
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
+
+                      <div class="input-data" style="width: 6%; margin-top: 8px;" *ngIf="d.is_otp == 1">
+                        <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale">
+                          <div *ngIf="d.locale =='vi'">
+                            <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
+                              id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+                          </div>
+                          <div *ngIf="d.locale =='en'">
+                            <button *ngIf="d.locale =='en'" class="btn btn-outline-primary db_icon_english"
+                              id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+                          </div>
+                          <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                            <div class="switch-language">
+                              <button class="db_icon_vietnam" ngbDropdownItem (click)="d.locale = 'vi'">
+                                <div class="language">{{ "vie" | translate }}</div>
+                              </button>
+                            </div>
+                            <div class="switch-language">
+                              <button class="db_icon_english" ngbDropdownItem (click)="d.locale = 'en'">
+                                <div class="language">{{ "eng" | translate }}</div>
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
