--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -894,7 +894,7 @@
                     <div style="display: flex;">
                     <div class="input-data" style="width: 91%;margin-right: -3%;">
                       <img class="input-img">
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
                     </div>
 
                     <div class="participants__name" style="width: 17%;margin-left: 5%;">
