fix không lưu nhận sms thông báo khi xử lý hợp đồng

--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -954,9 +954,9 @@
                   <div class="participants__name" style="width: 90%">
                     <div style="height: 40px; display: flex; align-items: center;">
                       <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp != 1"
-                        (change)="changeIsSmsSignature($event, item, index)">
-                      <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp == 1" checked
-                        [disabled]="getDataSignCka(d).length > 0" (change)="changeIsSmsSignature($event, item, index)">
+                        (change)="changeIsSmsSignature($event, item, index,d)">
+                      <input *ngIf="d.is_otp == 1" type="checkbox" style="width: 17px; height: 17px;" checked
+                        [disabled]="getDataSignCka(d).length > 0" (change)="changeIsSmsSignature($event, item, index,d)">
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
 
                       <!-- <div class="input-data" style="width: 6%; margin-top: 8px;">
