--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -689,11 +689,11 @@
                     </div>
                   <div class="input-data" style="width: 13%; margin-top: -5px;" *ngIf="checkSms">
                     <div ngbDropdown class="d-inline-block" style="margin-left: 6px;">
-                      <div *ngIf="d.locale =='vi'">
+                      <div>
                         <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                           id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
                       </div>
-                      <div *ngIf="d.locale =='en'">
+                      <div>
                         <button *ngIf="d.locale =='en'" class="btn btn-outline-primary db_icon_english"
                           id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
                       </div>
@@ -788,28 +788,32 @@
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
 
                       <div class="input-data" style="width: 13%; margin-top: 8px;" *ngIf="d.is_otp == 1">
-                        <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" >
-                          <div *ngIf="d.locale =='vi'">
-                            <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
+                        <div ngbDropdown class="d-inline-block" style="margin-left: 6px;">
+                          <div>
+                            <button *ngIf="d.locale == 'vi'" class="btn btn-outline-primary db_icon_vietnam"
                               id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
                           </div>
-                          <div *ngIf="d.locale =='en'">
-                            <button *ngIf="d.locale =='en'" class="btn btn-outline-primary db_icon_english"
+                          <div >
+                            <button *ngIf="d.locale == 'en'" class="btn btn-outline-primary db_icon_english"
                               id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
                           </div>
 
-                          <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
-                            <div class="switch-language">
-                              <button class="db_icon_vietnam" ngbDropdownItem (click)="d.locale = 'vi'">
-                                <div class="language">{{ "vie" | translate }}</div>
-                              </button>
+                      
+                            <!--Ko vào lần đầu-->
+                            <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                              <div class="switch-language">
+                                <button class="db_icon_vietnam" ngbDropdownItem (click)="setLocale(d,'vi')">
+                                  <div class="language">{{ "vie" | translate }}</div>
+                                </button>
+                              </div>
+                              <div class="switch-language">
+                                <button class="db_icon_english" ngbDropdownItem (click)="setLocale(d,'en')">
+                                  <div class="language">{{ "eng" | translate }}</div>
+                                </button>
+                              </div>
                             </div>
-                            <div class="switch-language">
-                              <button class="db_icon_english" ngbDropdownItem (click)="d.locale = 'en'">
-                                <div class="language">{{ "eng" | translate }}</div>
-                              </button>
-                            </div>
-                          </div>
+                          <!-- </div> -->
+                          
                         </div>
 
                         
@@ -1109,27 +1113,32 @@
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
 
                       <div class="input-data" style="width: 6%; margin-top: 8px;" *ngIf="d.is_otp == 1">
-                        <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" >
-                          <div *ngIf="d.locale =='vi'">
-                            <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
+                        <div ngbDropdown class="d-inline-block" style="margin-left: 6px;">
+                          <div>
+                            <button *ngIf="d.locale == 'vi'" class="btn btn-outline-primary db_icon_vietnam"
                               id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
                           </div>
-                          <div *ngIf="d.locale =='en'">
-                            <button *ngIf="d.locale =='en'" class="btn btn-outline-primary db_icon_english"
+                          <div >
+                            <button *ngIf="d.locale == 'en'" class="btn btn-outline-primary db_icon_english"
                               id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
                           </div>
-                          <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
-                            <div class="switch-language">
-                              <button class="db_icon_vietnam" ngbDropdownItem (click)="d.locale = 'vi'">
-                                <div class="language">{{ "vie" | translate }}</div>
-                              </button>
+
+                      
+                            <!--Ko vào lần đầu-->
+                            <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                              <div class="switch-language">
+                                <button class="db_icon_vietnam" ngbDropdownItem (click)="setLocale(d,'vi')">
+                                  <div class="language">{{ "vie" | translate }}</div>
+                                </button>
+                              </div>
+                              <div class="switch-language">
+                                <button class="db_icon_english" ngbDropdownItem (click)="setLocale(d,'en')">
+                                  <div class="language">{{ "eng" | translate }}</div>
+                                </button>
+                              </div>
                             </div>
-                            <div class="switch-language">
-                              <button class="db_icon_english" ngbDropdownItem (click)="d.locale = 'en'">
-                                <div class="language">{{ "eng" | translate }}</div>
-                              </button>
-                            </div>
-                          </div>
+                          <!-- </div> -->
+                          
                         </div>
                       </div>
                       
@@ -1298,27 +1307,32 @@
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
 
                       <div class="input-data" style="width: 6%; margin-top: 8px;" *ngIf="d.is_otp == 1">
-                        <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" >
-                          <div *ngIf="d.locale =='vi'">
-                            <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
+                        <div ngbDropdown class="d-inline-block" style="margin-left: 6px;">
+                          <div>
+                            <button *ngIf="d.locale == 'vi'" class="btn btn-outline-primary db_icon_vietnam"
                               id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
                           </div>
-                          <div *ngIf="d.locale =='en'">
-                            <button *ngIf="d.locale =='en'" class="btn btn-outline-primary db_icon_english"
+                          <div >
+                            <button *ngIf="d.locale == 'en'" class="btn btn-outline-primary db_icon_english"
                               id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
                           </div>
-                          <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
-                            <div class="switch-language">
-                              <button class="db_icon_vietnam" ngbDropdownItem (click)="d.locale = 'vi'">
-                                <div class="language">{{ "vie" | translate }}</div>
-                              </button>
+
+                      
+                            <!--Ko vào lần đầu-->
+                            <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                              <div class="switch-language">
+                                <button class="db_icon_vietnam" ngbDropdownItem (click)="setLocale(d,'vi')">
+                                  <div class="language">{{ "vie" | translate }}</div>
+                                </button>
+                              </div>
+                              <div class="switch-language">
+                                <button class="db_icon_english" ngbDropdownItem (click)="setLocale(d,'en')">
+                                  <div class="language">{{ "eng" | translate }}</div>
+                                </button>
+                              </div>
                             </div>
-                            <div class="switch-language">
-                              <button class="db_icon_english" ngbDropdownItem (click)="d.locale = 'en'">
-                                <div class="language">{{ "eng" | translate }}</div>
-                              </button>
-                            </div>
-                          </div>
+                          <!-- </div> -->
+                          
                         </div>
                       </div>
                     </div>
