--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -4,7 +4,15 @@
         <div class="col-md-2">
             <div>{{'organization' | translate}}</div>
             <div class="input-line">
-                <input type="text" class="input_text"/>
+            <p-treeSelect 
+                [(ngModel)]="selectedNodeOrganization" 
+                placeholder="{{'all' | translate}}" 
+                [filter]="true" 
+                filterBy="name"  
+                [droppable]="true" 
+                [options]="listOrgCombobox" 
+            >
+          </p-treeSelect>
             </div>
         </div>
 
@@ -30,11 +38,29 @@
             <button class="btn btn-lg btn-block btn_submit">{{'btn.add' | translate }}</button>
         </div>
     </div>
+
+    <!--Nút tick bao gồm tổ chức-->
     <div class="row" style="padding-top: 10px;">
         <div class="col-md-6">
             <input type="radio">&nbsp;
-            <span>Bao gồm cả tổ chức con (Tổ chức con chỉ bao gồm tổ chức con cấp một)</span>
+            <span>{{'include.org1' | translate}}</span>
         </div>
- 
+    </div>
+
+    <!--Bảng dữ liệu-->
+    <div class="row" style="padding-top: 20px;">
+        <p-table [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
+            <ng-template pTemplate="header" let-columns>
+                <tr>
+                    <th *ngFor="let col of cols" [style]='col.style'>
+                    {{col.header | translate}}
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-list>
+            <tr>
+            </tr>
+            </ng-template>
+        </p-table>
     </div>
 </div>
