--- a/src/app/main/report/report-detail/report-detail.component.scss
+++ b/src/app/main/report/report-detail/report-detail.component.scss
@@ -21,4 +21,19 @@
     font-size: 13px;
     margin: 0 10px;
 }
+
+:host ::ng-deep {
+  .p-treeselect, .p-dropdown {
+      border: 1px solid #106DB6;
+      border-radius: 5px;
+      height: 33px;
+      width: 100%;
+      outline: 0;
+      color: black !important;
+  }
+  .p-treeselect-label, .p-dropdown-label {
+      padding: 5px 5px 5px 15px;
+  }
+}
+
   
