--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.scss
@@ -27,7 +27,10 @@
   align-items: center;
   padding-left: 16px;
 }
-
+.sms_languge{
+  display: flex;
+  align-items: center;
+}
 .label_detail {
   font-weight: 500;
   color: #0160AE;
@@ -294,6 +297,7 @@ input[type="checkbox"] {
       .participants--input {
         display: flex;
         justify-content: space-around;
+        
 
         .participants__name {
           width: 41%;
