--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -50,15 +50,28 @@
     <!--Bảng dữ liệu-->
     <div class="row" style="padding-top: 20px;">
         <p-table [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
+
+            <!--header-->
             <ng-template pTemplate="header" let-columns>
+                <!--header 1-->
                 <tr>
-                    <th *ngFor="let col of cols" [style]='col.style'>
-                    {{col.header | translate}}
+                    <th *ngFor="let col of cols" [style]='col.style' [colSpan]="col.colspan" [rowSpan]="col.rowspan">
+                      {{col.header | translate}}
+                    </th>
+                </tr>
+
+                <!--header 2 bên đề nghị-->
+                <tr>
+                    <th *ngFor="let col of colsSuggest" [style]='col.style' [colSpan]="col.colspan" [rowSpan]="col.rowspan">
+                        {{col.header | translate}}
                     </th>
                 </tr>
             </ng-template>
+
             <ng-template pTemplate="body" let-list>
+
             <tr>
+
             </tr>
             </ng-template>
         </p-table>
