--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -10,7 +10,7 @@
                 [filter]="true" 
                 filterBy="name"  
                 [droppable]="true" 
-                [options]="listOrgCombobox" 
+                [options]="listOrgCombobox"
             >
           </p-treeSelect>
             </div>
@@ -20,22 +20,32 @@
         <div class="col-md-2">
             <div>{{ 'create-date' | translate}}</div>
             <div class="input-line">
-                <input type="text" class="input_text"/>
+                <p-calendar selectionMode="range" [readonlyInput]="true" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"
+                          
+                ></p-calendar>
             </div>
         </div>
 
-        <!--Ngày tạo hợp đồng-->
+        <!--Trạng thái-->
         <div class="col-md-2">
             <div>{{'contract.status' | translate}}</div>
             <div class="input-line">
-                <input type="text" class="input_text"/>
+                <p-dropdown 
+                    panelStyleClass="font"
+                    appendTo="body"
+                    optionLabel="name"
+                    optionValue="id" 
+                    placeholder="{{'contract.status.v2' | translate}}" 
+                    [showClear]="true"  
+                    [options]="optionsStatus"
+                ></p-dropdown>
             </div>
         </div>
 
         <!--Button-->
         <div class="col-md-6 btn_search">
-            <button class="btn btn-lg btn-block btn_submit">{{'btn.search' | translate }}</button>
-            <button class="btn btn-lg btn-block btn_submit">{{'btn.add' | translate }}</button>
+            <button class="btn btn-lg btn-block btn_submit">{{'btn.report' | translate }}</button>
+            <button class="btn btn-lg btn-block btn_submit">Export</button>
         </div>
     </div>
 
@@ -47,12 +57,14 @@
         </div>
     </div>
 
+
+
     <!--Bảng dữ liệu-->
     <div class="row" style="padding-top: 20px;">
         <p-table [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
 
             <!--header-->
-            <ng-template pTemplate="header" let-columns>
+            <ng-template pTemplate="header">
                 <!--header 1-->
                 <tr>
                     <th *ngFor="let col of cols" [style]='col.style' [colSpan]="col.colspan" [rowSpan]="col.rowspan">
@@ -69,11 +81,14 @@
             </ng-template>
 
             <ng-template pTemplate="body" let-list>
-
-            <tr>
-
-            </tr>
+                <tr class="subheader-row">
+                    <!-- <td>{{list.product}}</td> -->
+                    <td *ngFor="let col of mergeCol; let colIndex = index">
+                        <span *ngIf="col.id == 1">{{list.product}}</span>
+                    </td>
+                </tr>
             </ng-template>
         </p-table>
     </div>
+    
 </div>
